--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,24 @@
 /*  your css code here. If applicable */
+body{
+    font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+    background-color:  rgb(204, 204, 204)
+}
+
+#_blank{
+    text-decoration-line: none;
+    list-style-type: none;
+    border-width: 200px;
+    height: 150px;
+    border-color: black;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-right-width: 2px;
+    border-left-width: 2px;
+    background-color: white;
+    border-radius: 10px;
+    padding: 40px;
+}
