--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,14 @@ body{
     background-color:  rgb(204, 204, 204)
 }
 
+h1{
+	text-align:center;
+}
+
+h2{
+	text-align:center;
+}
+
 #_blank{
     text-decoration-line: none;
     list-style-type: none;
