--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /*  your css code here. If applicable */
 body{
     font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
-    background-color:  rgb(204, 204, 204)
+    background-color:  rgb(204, 204, 204);
 }
 
 h1{
@@ -12,7 +12,7 @@ h2{
 	text-align:center;
 }
 
-#_blank{
+#blank{
     text-decoration-line: none;
     list-style-type: none;
     border-width: 200px;
