--- a/styles.css
+++ b/styles.css
@@ -30,3 +30,27 @@ h2{
     border-radius: 10px;
     padding: 40px;
 }
+#box{
+    margin: auto;
+    width: 900px;
+    height: 800px;
+    border-color: black;
+    border-top-style: solid;
+    border-bottom-style: solid;
+    border-right-style: solid;
+    border-left-style: solid;
+    border-top-width: 2px;
+    border-bottom-width: 2px;
+    border-right-width: 2px;
+    border-left-width: 2px;
+    background-color: white;
+    border-radius: 10px;
+}
+
+.player_one{
+    background-color: rgb(255, 255, 255);
+    border-radius: 10px;
+    width: 90%;
+    padding: 10px;
+    margin: 35px;
+}
