--- a/styles.css
+++ b/styles.css
@@ -33,7 +33,7 @@ h2{
 #box{
     margin: auto;
     width: 900px;
-    height: 800px;
+    height: 870px;
     border-color: black;
     border-top-style: solid;
     border-bottom-style: solid;
@@ -53,4 +53,10 @@ h2{
     width: 90%;
     padding: 10px;
     margin: 35px;
+}
+
+.player_two{
+    width: 100%;
+    padding: 0px;
+    margin: 0px;
 }
